--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <div class="card-footer">
           <div class="footer-text">
-            Link to <a href="https://github.com/Ibifubara/HNGxProfile_Card" data-testid="githubURL">Hub</a>.
+            Link to <a href="https://github.com/Ibifubara/HNGxProfile_Card" data-testid="githubURL">GitHub</a>.
           </div>
         </div>
       </div>
